syntax = "proto3";

package response;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// FlowResponse represents a test case for tagging: a test flow that was just tagged
message FlowResponse {
	// CompanyID that processed the message
	uint32 CompanyID = 1;

	// DeviceID that processed this message
	uint32 DeviceID = 2;

	// Host that processed this flow
	string Host = 3;

	// ScenarioName holds the test scenario name
	string ScenarioName = 4;

	// Serialized flow, with tags (github.com/kentik/proto/kflow/CHF)
	bytes SerializedFlow = 5;

	// FieldID under test (echoed from request)
	uint32 FieldID = 6;

	// Expected value in this field (converted to string if necessary) (echoed from request)
	string ExpectedFieldValue = 7;

  // the shard number of the device that processed this message
  uint32 ShardNumber = 8;
}
